# job-mailer

./: .gitignore  Cargo.toml  README.md  config.json
src/: main.rs
